api-gateway/ambassador/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: face-systems-ingress
  annotations:
    nginx.ingress.kubernetes.io/app-root: /otusapp/vaagn
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aes-ambassador
                port:
                  number: 80
